# debitMachine

Sweetpeas_Debit_Machine/: platformio-Asus.ini  platformio.ini
Sweetpeas_Debit_Machine/src/: CMakeLists.txt  Sweetpeas_Debit_Machine.code-workspace  filelist.txt  main.cpp  ui.h  ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_screen1_button1.c  ui_comp_screen1_button1.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_1635345530.c  ui_img_2049135699.c  ui_img_589022287.c  ui_img_cancel02_png.c  ui_img_cancel_png.c  ui_img_checkmark02_png.c  ui_img_checkmark_png.c  ui_img_croissant_01_png.c  ui_img_croissant_02_png.c  ui_img_croissant_03_png.c  ui_img_cupcake02_png.c  ui_img_cupcake_png.c  ui_img_g10_png.c  ui_img_g3612_png.c  ui_img_g3613_png.c  ui_img_gauge03_png.c  ui_img_logoleahscafe_png.c  ui_img_payment_clicked_png.c  ui_img_payment_png.c  ui_img_rainbow_banner_png.c  ui_img_rect504_png.c  ui_img_thankyou_png.c
